Redmine issue 1019: fixing search help --wiki page visibility

--- a/shared/css/bootstrap_override.css
+++ b/shared/css/bootstrap_override.css
@@ -2724,7 +2724,7 @@ div.toctitle {
 }
 .eyelash_button {
 	padding: 3px 0.5rem;
-	margin: 3px;
+	margin: 4px;
 }
 
 /*******************************
